--- a/memoized-chm/pom.xml
+++ b/memoized-chm/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.pragmaticobjects.oo.memoized</groupId>
         <artifactId>oo-memoized</artifactId>
-        <version>0.0.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <artifactId>memoized-chm</artifactId>
     <packaging>jar</packaging>
